--- a/prac5/src/main/resources/templates/vista/index.html
+++ b/prac5/src/main/resources/templates/vista/index.html
@@ -35,178 +35,187 @@
     </style>
 </head>
 <body>
-    <header class="p-3 text-bg-dark">
-        <div class="container-fluid">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <!--                <a href="/" class="d-flex align-items-left mb-2 mb-lg-0 text-white text-decoration-none">-->
-                <!--&lt;!&ndash;                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>&ndash;&gt;-->
-                <!--                    <img src="/publico/logo-invertido.png" alt="Logo-QuickBuy">-->
-                <!--                </a>-->
-                <img src="/images/logo-invertido.png" alt="logo-QuickBuy" class="logo">
+<header class="p-3 text-bg-dark">
+    <div class="container-fluid">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <!--                <a href="/" class="d-flex align-items-left mb-2 mb-lg-0 text-white text-decoration-none">-->
+            <!--&lt;!&ndash;                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>&ndash;&gt;-->
+            <!--                    <img src="/publico/logo-invertido.png" alt="Logo-QuickBuy">-->
+            <!--                </a>-->
+            <img src="/images/logo-invertido.png" alt="logo-QuickBuy" class="logo">
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/" class="nav-link px-4 text-info">Comprar</a></li>
-                    <li><a href="/Ventas" class="nav-link px-4 text-white">Ventas Realizadas</a></li>
-                    <li><a href="/Seguridad/Productos" class="nav-link px-4 text-white">Administrar Productos</a></li>
-                    <li><a href="/carritoCompras" class="nav-link px-4 text-white">Carrito (<span th:text="${cantidadProdCarrito}"></span>)</a></li>
-                </ul>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/" class="nav-link px-4 text-info">Comprar</a></li>
+                <li><a href="/Ventas" class="nav-link px-4 text-white">Ventas Realizadas</a></li>
+                <li><a href="/Seguridad/Productos" class="nav-link px-4 text-white">Administrar Productos</a></li>
+                <li><a href="/carritoCompras" class="nav-link px-4 text-white">Carrito (<span th:text="${cantidadProdCarrito}"></span>)</a></li>
+            </ul>
 
-                <div class="text-end ml-3">
+            <div class="text-end ml-3">
 
-                    <div th:if="${session.usuario == null}">
-                        <a href="/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
-                        <a href="/registrar" class="btn btn-info">Registrar</a>
-                    </div>
+                <div th:if="${session.usuario == null}">
+                    <a href="/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
+                    <a href="/registrar" class="btn btn-info">Registrar</a>
+                </div>
 
-                    <div th:if="${session.usuario != null}">
-                        <span th:text="${session.usuario.usuario}" class="ml-10"></span>
-                        <a href="/logout" class="btn btn-outline-danger mr-10">Logout</a>
-                    </div>
+                <div th:if="${session.usuario != null}">
+                    <span th:text="${session.usuario.usuario}" class="ml-10"></span>
+                    <a href="/logout" class="btn btn-outline-danger mr-10">Logout</a>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
-    <br>
-    <div class="container">
+<br>
+<div class="container">
+    <div class="row">
+        <h1 class="text-center">
+            Listado de productos
+        </h1>
+    </div>
+</div>
+
+
+<br>
+<br>
+
+<!-- Mostrar los productos de acuerdo a la página actual -->
+<div class="d-flex justify-content-center">
+    <div class="container-fluid">
         <div class="row">
-            <h1 class="text-center">
-                Listado de productos
-            </h1>
-        </div>
-    </div>
-
-
-    <br>
-    <br>
-
-    <!-- Mostrar los productos de acuerdo a la página actual -->
-    <div class="d-flex justify-content-center">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8 mx-auto">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div style="font-size: 1.5em">
-                                        <p>En linea:</p>
-                                    </div>
-                                    <p><span id="userCount">0</span> usuarios</p>
+            <div class="col-md-8 mx-auto">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div style="font-size: 1.5em">
+                                    <p>En linea:</p>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-10">
-                            <div class="offset-10">
-                                <div th:if="${session.usuario != null}">
-                                    <div th:if="${session.usuario.usuario eq 'admin'}">
-                                        <div class="row">
-                                            <div class="row justify-content-center">
-                                                <a href="/dashboard" class="btn btn-outline-info ml-auto">Dashboard</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <p><span id="userCount">0</span> usuarios</p>
                             </div>
                         </div>
                     </div>
-                    <br>
-                    <div class="row align-items-start">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th scope="col">Foto</th>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Precio</th>
-                                    <th scope="col">Cantidad</th>
-                                    <th scope="col">Accion</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="producto : ${productos}">
-                                    <form th:action="'/carritoCompras/' + ${producto.idProducto}" method="post">
-                                        <td>
-                                            <img th:if="${producto.fotos.size() > 0}" class="img-tabla" th:src="@{'data:' + ${producto.fotos.get(0).mimeType} + ';base64,' + ${producto.fotos.get(0).fotoBase64}}">
-                                        </td>
-                                        <td th:hidden="${producto.idProducto}"></td>
-                                        <td>
-                                            <a th:href="'/producto/' + ${producto.idProducto}">
-                                                <span th:text="${producto.nombre}"></span>
-                                            </a>
-                                        </td>
-                                        <td th:text="${producto.precio}"></td>
-                                        <td th:hidden="${producto.cantidad}"></td>
-                                        <td>
-                                            <input type="number" class="btn btn-outline-secondary" value="1" min="0" max="..." name="cantidad">
-                                        </td>
-                                        <td>
-                                            <button type="submit" class="btn btn-info">Agregar al carrito</button>
-                                        </td>
-                                    </form>
-                                </tr>
-                                </tbody>
-                                <tfoot>
-                                <tr>
-                                    <td colspan="5"> <!-- Colspan 3 para que ocupe las tres columnas de la tabla -->
-                                        <div class="row">
-                                            <nav aria-label="Page navigation">
-                                                <nav>
-                                                    <ul class="pagination justify-content-end">
-                                                        <li class="page-item" th:classappend="${actualPage == 1} ? 'disabled' : ''">
-                                                            <a class="page-link" th:href="'/?page=' + ${actualPage - 1}" tabindex="-1">Anterior</a>
-                                                        </li>
-
-                                                        <li class="page-item" th:classappend="${page == actualPage} ? 'selected' : ''" th:each="page : ${#numbers.sequence(actualPage - 2, actualPage + 2)}"
-                                                            th:if="${page > 0 && page <= totalPages}">
-                                                            <a class="page-link" th:href="${'/?page=' + page}" th:text="${page}"></a>
-                                                        </li>
-
-                                                        <li class="page-item">
-                                                            <a class="page-link" th:classappend="${actualPage == totalPages} ? 'disabled' : ''"
-                                                               th:href="'/?page=' + ${actualPage + 1}">Siguiente</a>
-                                                        </li>
-
-                                                    </ul>
-                                                </nav>
-                                            </nav>
+                    <div class="col-md-10">
+                        <div class="offset-10">
+                            <div th:if="${session.usuario != null}">
+                                <div th:if="${session.usuario.usuario eq 'admin'}">
+                                    <div class="row">
+                                        <div class="row justify-content-center">
+                                            <a href="/dashboard" class="btn btn-outline-info ml-auto">Dashboard</a>
                                         </div>
-                                    </td>
-                                </tr>
-                                </tfoot>
-                            </table>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
                 <br>
-                <br>
+                <div class="row align-items-start">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Foto</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Accion</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="producto : ${productos}">
+                                <form th:action="'/carritoCompras/' + ${producto.idProducto}" method="post">
+                                    <td>
+                                        <img th:if="${producto.fotos.size() > 0}" class="img-tabla" th:src="@{'data:' + ${producto.fotos.get(0).mimeType} + ';base64,' + ${producto.fotos.get(0).fotoBase64}}">
+                                    </td>
+                                    <td th:hidden="${producto.idProducto}"></td>
+                                    <td>
+                                        <a th:href="'/producto/' + ${producto.idProducto}">
+                                            <span th:text="${producto.nombre}"></span>
+                                        </a>
+                                    </td>
+                                    <td th:text="${producto.precio}"></td>
+                                    <td th:hidden="${producto.cantidad}"></td>
+                                    <td>
+                                        <input type="number" class="btn btn-outline-secondary" value="1" min="0" max="..." name="cantidad">
+                                    </td>
+                                    <td>
+                                        <button type="submit" class="btn btn-info">Agregar al carrito</button>
+                                    </td>
+                                </form>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <td colspan="5"> <!-- Colspan 3 para que ocupe las tres columnas de la tabla -->
+                                    <div class="row">
+                                        <nav aria-label="Page navigation">
+                                            <nav>
+                                                <ul class="pagination justify-content-end">
+                                                    <li class="page-item" th:classappend="${actualPage == 1} ? 'disabled' : ''">
+                                                        <a class="page-link" th:href="'/?page=' + ${actualPage - 1}" tabindex="-1">Anterior</a>
+                                                    </li>
 
+                                                    <li class="page-item" th:classappend="${page == actualPage} ? 'selected' : ''" th:each="page : ${#numbers.sequence(actualPage - 2, actualPage + 2)}"
+                                                        th:if="${page > 0 && page <= totalPages}">
+                                                        <a class="page-link" th:href="${'/?page=' + page}" th:text="${page}"></a>
+                                                    </li>
+
+                                                    <li class="page-item">
+                                                        <a class="page-link" th:classappend="${actualPage == totalPages} ? 'disabled' : ''"
+                                                           th:href="'/?page=' + ${actualPage + 1}">Siguiente</a>
+                                                    </li>
+
+                                                </ul>
+                                            </nav>
+                                        </nav>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
             </div>
+
+            <br>
+            <br>
+
         </div>
     </div>
+</div>
 
 
-    <script>
-        $(document).ready(function() {
+<script>
+    var websocket;
+    var reconnectInterval = 5000;
+
+    $(document).ready(function() {
+        connect();
+
+    });
+
+    function receiveDataFromServer(message) {
+        var userCount = document.getElementById('userCount');
+        userCount.textContent = message.data;
+    }
+
+    function connect() {
+        websocket = new WebSocket("ws://" + location.hostname + ":" + location.port + "/ws");
+
+        websocket.onmessage = receiveDataFromServer;
+        websocket.onopen = function(e) { console.log("Connected - status " + this.readyState); };
+        websocket.onclose = function(e) { console.log("Disconnected - status " + this.readyState); };
+    }
+
+    function checkConnection() {
+        if (!websocket || websocket.readyState == 3) {
             connect();
-        });
-        function connect(){
-            const userCount = document.getElementById('userCount');
-
-            websocket = new WebSocket("ws://"+ location.hostname +":"+ location.port + "/ws");
-
-            websocket.onmessage = function (event){
-                updateComment
-            }
-
-
-            socket.addEventListener('message', (event) => {
-                userCount.textContent = event.data;
-            });
-
         }
+    }
 
-    </script>
+    setInterval(checkConnection, reconnectInterval); // Reconnect if needed
+</script>
 </body>
 </html>
